--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
+spring.jackson.deserialization.unwrap-root-value=false
+spring.jackson.serialization.write-enums-using-to-string=true
+spring.jackson.deserialization.read-enums-using-to-string=true
+spring.jackson.default-property-inclusion=non_empty
